src/evaluator/expression/boolean/tests/snapshots/monkey_interpreter__evaluator__expression__boolean__tests__test_evaluator_boolean_nodes_case1.snap
---
source: src/evaluator/expression/boolean/tests/mod.rs
expression: "crate::evaluator::evaluate(crate::evaluator::evaluator_context::EvaluatorContext::new(),\n                           crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code)))"
---
(
    EvaluatorContext,
    TRUE,
)
